--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,12 @@
-// TODO
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+  height: 105px;
+
+  display: flex;
+  align-items: center;
+
+  img {
+    margin-left: 13.125rem;
+  }
+}
